tests/neg/with-type-operator.scala
// `with` as a type operator is an error since 3.10 (deprecated since 3.4).

def foo: Int with String = ??? // error
